# lib_3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  lib_3d.h
inc/: Facet.h  Matrix.h  MatrixFactory.h  MatrixPipe.h  Mesh.h  Point.h  PointCloud.h  PointVec.h  Quaternion.h  Vec.h  constants.h
tests/: stlAscii.stl  test.cpp  test_lib_3d.cpp
